refactor(code smells)